--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -34,8 +34,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1
 excludes=
 file.reference.gs-core-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-core-2.0.jar
+file.reference.gs-core-2.0.jar-1=..\\..\\..\\Downloads\\gs-core-2.0.jar
 file.reference.gs-core-2.0__1_.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-core-2.0 (1).jar
 file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar-1=..\\..\\..\\Downloads\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
@@ -44,7 +46,10 @@ javac.classpath=\
     ${file.reference.gs-core-2.0__1_.jar}:\
     ${file.reference.gs-core-2.0.jar}:\
     ${file.reference.gs-ui-swing-2.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-core-2.0.jar-1}:\
+    ${file.reference.gs-ui-javafx-2.0.jar-1}:\
+    ${libs.gs-ui-swing.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +85,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto1
-main.class=proyecto1.Proyecto1
+main.class=proyecto.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
