--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -35,10 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto1
 excludes=
 file.reference.gs-core-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-core-2.0.jar
 file.reference.gs-core-2.0.jar-1=..\\..\\..\\Downloads\\gs-core-2.0.jar
+file.reference.gs-core-2.0.jar-2=C:\\Users\\ACER\\Downloads\\gs-core-2.0.jar
 file.reference.gs-core-2.0__1_.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-core-2.0 (1).jar
 file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-javafx-2.0.jar-1=..\\..\\..\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar-2=C:\\Users\\ACER\\Downloads\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=C:\\Users\\UsuarioDeWindows\\Downloads\\gs-ui-swing-2.0.jar
+file.reference.gs-ui-swing-2.0.jar-1=C:\\Users\\ACER\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +52,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.gs-core-2.0.jar-1}:\
     ${file.reference.gs-ui-javafx-2.0.jar-1}:\
-    ${libs.gs-ui-swing.classpath}
+    ${libs.gs-ui-swing.classpath}:\
+    ${file.reference.gs-core-2.0.jar-2}:\
+    ${file.reference.gs-ui-javafx-2.0.jar-2}:\
+    ${file.reference.gs-ui-swing-2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
